<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:minHeight="?android:attr/listPreferredItemHeight"
              android:orientation="vertical">

    <TextView android:id="@android:id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="16dp"
              android:ellipsize="marquee"
              android:fadingEdge="horizontal"
              android:maxLines="1"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="16sp"/>

    <TextView
        android:id="@android:id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:maxLines="10"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.appyvet.rangebar.RangeBar
            android:id="@+id/range_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barWeight="2dp"
            app:connectingLineColor="?attr/colorAccent"
            app:connectingLineWeight="1dp"
            app:pinRadius="0dp"
            app:selectorColor="?attr/colorAccent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/low_value_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/current_low_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingEnd="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingStart="4dp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/current_low_value_measurement_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:maxLines="1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/current_low_value_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/bottom_line"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/high_value_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/current_high_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingEnd="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingStart="4dp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/current_high_value_measurement_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:maxLines="1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/current_high_value_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/bottom_line"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>