<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_color_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:contentDescription="@string/compass_logo_description"
            app:srcCompat="@drawable/math_compass"/>

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/enter_custom_value"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:weightSum="3.5">
        <TextView
            android:id="@+id/minValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/less_than_or_equal_to"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/customValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/less_than_or_equal_to"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/maxValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"/>

        <Button
            android:id="@+id/btn_apply"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>

    </LinearLayout>

</LinearLayout>