<resources>
    <string name="app_name">RangeBarPreferenceSample</string>

    <string name="range_bar">range_bar</string>
    <string name="range_bar_summary">This is a range bar</string>
    <string name="range_bar_title">Range Bar</string>
    <string name="range_bar_default_value">Some Json</string>
    <string name="switch_to_compat">Switch To Compat</string>
    <string name="switch_to_standard">Switch To Standard</string>

    <string name="start_tick">5000</string>
    <string name="end_tick">20000</string>
    <string name="interval_tick">1</string>
    <string name="default_low_value">7000</string>
    <string name="default_high_value">10000</string>
</resources>
